@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST hike-1.2.2.tgz 8994 SHA256 ba7116a0a54ecac46e5e14cdb7530abc3f69e0e07172eeb3c1dea875d99959e6 SHA512 f3bfc526387e3217ce966ccc152042cc2c56ef556bcab816a9dcc0d7a242f96cbf012a9bd1c8677e57725b07e06b434d3eb2e1e62cd4cbbfc846dd7b0ea5397a WHIRLPOOL ac3047efe1102879eb0af568258276063c07e1f506db640b862db7fc215aeaf7294ca4d3c56dd7c1eea056b2b3ed77a44505a4c2a949d27363820ccd50a99f26
 DIST hike-1.2.3.tgz 9010 SHA256 0dbb22f1596ec0a5261e454028ce36661b4185b4527bfd98c365495f03234833 SHA512 0d7a35c0f9b4f5f1f99d4b2b753244cb712ebc24cc54b366c60ac6094a2ec693df86443e0b4499358cdd4f6411347ad80e0fc90b5fb7f4dd9b627832b645adcd WHIRLPOOL daf6673ac9f57b50f663c66c083e93de3c31c792803799d0a98c630a89338a21c5c27f6e641f0e781f1dc53ebf667bb128397bca8ef0934e16ea3d7ad18a3d04
-EBUILD hike-1.2.2.ebuild 813 SHA256 fda4175bbb8bf336fd302c6f1537ac01b4b3464e2bbbbc4db857271191244793 SHA512 2f6e8d80edd0124ff5b2c68a7c405ed07220e9f3617230790d36a37b08facb38c0e705d1aaaf34d3089e56cab5221ab9a6e933515adcd498c4b54cc15c1e52fd WHIRLPOOL f9b011b45ec459b61eb5b79977557eaf7d75c2e1b4ea9e882435a98ff244732589824d9dfe2bc12a5d1f705d2ad5d59dea410be4401c0b753d5d6803db92a081
 EBUILD hike-1.2.3.ebuild 820 SHA256 e3b0ac54694bc4e487dae7825e2d693d275976786db2751fa5083bb632cc3e2c SHA512 aba6dd9ac38f04d696d4a803b751519a06737922739efa35a6bc82bdfb0a13b30e9400c9aef601d6c7e579eb01dafe0c4d06c2683207682ad2998abad11d7ca3 WHIRLPOOL b51723ae1730f693eb3d7eae000cb25d950fde787d0babf09b09f76be24405ddcb23173a1ab58bfa956d98e93c2fe5896141d116b5e01233d54502a9412f9114
-MISC ChangeLog 1374 SHA256 a30892d4d4339e02b66758fa31eb4fae109de5e26e26ac6ec2fb662c655a0143 SHA512 183446d496cba356343757f15cc92579b618bd009f070bd77c31e3e6c437d00d54493133f30d1c245be91e781e5ed748982a42e50dbc9d40a52fad4b913c7db4 WHIRLPOOL 34e98910f25738389451e029760eb4b8170158a13f87bf65035d367d139be961896dc11220fc8fa51a7f68fe9a731f395a3808cb5968d733bff5122ef6939d1e
+MISC ChangeLog 1456 SHA256 b2d2d1928e72b9b4d5515f922e1d459624b145e4da9733fd6fb15231aa9e1de6 SHA512 4ac47f888b33869059e35683a30e452c53ad564673342d194607276f5994ba3dd73c6070290971c85dce6f681c470a712f22ac9629537117bcc07c990b0987d8 WHIRLPOOL 51b7eb28010f0dc7f8eea50278298f46ff4bc233f89011aecfc4ea6adf501255bd5ddf2bcc6df1e1662855ffe972821ee5b8b908fad087a781db14183e903d80
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlHmQwQACgkQiIP6VqMIqNdEtgEAic0vCyDwTh6EErPt0UzjaGOI
-tYMLit8yvXMN4aYVLGgA/RB2t7i3ZA4CgZStBZuHR+esW+UMAskNZwQmE1d+xa2r
-=9iII
+iF4EAREIAAYFAlI1UDcACgkQiIP6VqMIqNdmSwD/QIYPVGUXdnhAdE9yatssFZ7Z
+UUJPasvCbDrn81uYFW4BAJdi1SQgDo30U46kAy04Dm4Q0nGvuaK2dqjuZbr55lRs
+=9cWP
 -----END PGP SIGNATURE-----
