@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/hike
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hike/ChangeLog,v 1.10 2013/07/17 07:08:49 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hike/ChangeLog,v 1.11 2013/09/15 06:14:08 graaff Exp $
+
+  15 Sep 2013; Hans de Graaff <graaff@gentoo.org> -hike-1.2.2.ebuild:
+  Cleanup.
 
 *hike-1.2.3 (17 Jul 2013)
 
